tests/dataset/tpc-ds/compiler/pl/q15.error
run: exit status 2
[ {"ca_zip":"85669", "sum_sales":0} ]
ERROR: /tmp/q15.pl:64: user:main Unknown message: error('expect failed')
